Performance test for configuration time with Java Software Model