@@ -1,5 +1,5 @@
 /*
- * Copyright 2009 the original author or authors.
+ * Copyright 2015 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,24 +16,28 @@
 
 package org.gradle.performance
 
+import org.gradle.performance.categories.Experiment
 import org.gradle.performance.categories.JavaPerformanceTest
+import org.gradle.performance.measure.DataAmount
 import org.junit.experimental.categories.Category
 import spock.lang.Unroll
 
 import static org.gradle.performance.measure.Duration.millis
 
-@Category([JavaPerformanceTest])
-class TestExecutionPerformanceTest extends AbstractCrossVersionPerformanceTest {
-    @Unroll("Project '#testProject' test execution")
-    def "test execution"() {
+@Category([Experiment, JavaPerformanceTest])
+class JavaSoftwareModelConfigurationPerformanceTest extends AbstractCrossVersionPerformanceTest {
+
+    @Unroll("Project '#testProject' measuring configuration time")
+    def "configure java software model project"() {
         given:
-        runner.testId = "test $testProject"
+        runner.testId = "configure new java project $testProject"
         runner.testProject = testProject
-        runner.tasksToRun = ['cleanTest', 'test']
-        runner.args = ['-q']
-        runner.maxExecutionTimeRegression = maxExecutionTimeRegression
-        runner.targetVersions = ['1.0', '2.0', '2.2.1', 'last']
+        runner.tasksToRun = ['help']
+        runner.targetVersions = ['2.8', 'last']
         runner.useDaemon = true
+        runner.maxExecutionTimeRegression = maxExecutionTimeRegression
+        runner.maxMemoryRegression = DataAmount.mbytes(150)
+        runner.gradleOpts = ["-Xms1g", "-Xmx1g", "-XX:MaxPermSize=256m"]
 
         when:
         def result = runner.run()
@@ -42,10 +46,9 @@ class TestExecutionPerformanceTest extends AbstractCrossVersionPerformanceTest {
         result.assertCurrentVersionHasNotRegressed()
 
         where:
-        testProject         | maxExecutionTimeRegression
-        "withTestNG"        | millis(1000)
-        "withJUnit"         | millis(500)
-        "withVerboseTestNG" | millis(500)
-        "withVerboseJUnit"  | millis(500)
+        testProject               | maxExecutionTimeRegression
+        "largeJavaSwModelProject" | millis(500)
+        "bigNewJava"              | millis(500)
+        // TODO: these 2 template projects should be merged
     }
 }
